[package]
name = "genfer"
version = "0.1.0"
edition = "2021"
default-run = "genfer"
authors = ["Fabian Zaiser"]
description = "Exact Bayesian Inference for Discrete Probabilistic Programs via Generating Functions"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-arena = "2.0.2"
rustc-hash = "1.1.0"
ryu = "1.0.15"
nom = "7.1.3"
ndarray = "0.15.6"
num-traits = "0.2.16"
rand = "0.8.5"
rand_distr = "0.4.3"
clap = { version = "4.3.19", features = ["derive", "wrap_help"] }
rug = { version = "1.19.2", default-features = false, features = ["float", "rational"] }
z3 = "0.12.1"
good_lp = "1.5.0"
descent_ipopt = "0.5.0"
descent = "0.5.0"

[dev-dependencies]
expect-test = "1.4.1"
walkdir = "2.3.3"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[profile.release-dev]
inherits = "release"
lto = false
codegen-units = 16
panic = "unwind"
debug = true
overflow-checks = true
debug-assertions = true
strip = false
